# traffic_warning

./: .gitignore  LATE_PLATE_ENRICHMENT_REPORT.md  PLATE_ENRICHMENT_REALTIME_SYNC_REPORT.md  README.md  SYSTEM_TECHNICAL_ANALYSIS.md  pytest.ini
backend/: README.md  requirements.txt
config/: cameras.json  settings.json  traffic_warning.sqlite
edge_camera_node/: README.md  pyproject.toml  requirements.txt
edge_camera_node/config/: runtime_identity.json  settings.json
edge_camera_node/scripts/: check_environment.sh  enable_interfaces.sh  harden_network.sh  install_dependencies.sh  install_service.sh  run_dev.sh  uninstall_service.sh
edge_camera_node/src/traffic_camera_node/: __init__.py  config.py  health_api.py  identity.py  logging_setup.py  main.py  network.py  state.py
edge_camera_node/src/traffic_camera_node.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
edge_camera_node/src/traffic_camera_node/hardware/: __init__.py  buttons.py  gpio_pins.py  leds.py  system_metrics.py  tft_display.py
edge_camera_node/src/traffic_camera_node/stream/: __init__.py  fps_probe.py  process_supervisor.py  rtsp_pipeline.py
edge_camera_node/src/traffic_camera_node/utils/: __init__.py  debounce.py  shell.py  time_utils.py
edge_camera_node/systemd/: traffic-camera-node.service
edge_camera_node/tests/: test_config.py  test_identity.py  test_image_tuning_profiles.py  test_mdns_publisher.py  test_port_allocator.py  test_process_supervisor_probe_url.py  test_process_supervisor_watchdog_policy.py  test_state_machine.py  test_usb_mode_selection.py
(+297 files in other folders)
